<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Material Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit Location</string>
    <string name="deg">&#176;</string>
    <string name="test_deg"></string>
    <string name="test_loc">Hartford, CT</string>
    <string name="PREFS_KEY">io.github.vontell.materialweather.PREFS</string>
    <string name="weather_dialog_title">Refreshing Weather</string>
    <string name="weather_dialog_message">Downloading data&#8230;</string>
    <string name="edit_location_title">Change Location</string>
    <string name="edit_location_message">Enter your location (City, ZIP, etc&#8230;)</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="preferences_title">Settings</string>
    <string name="weather_preferences_title">Weather Options</string>
    <string name="display_weather_category">Statistics to Display</string>
    <string name="pref_temp_f_title">Fahrenheit</string>
    <string name="pref_temp_c_title">Celsius</string>
    <string name="pref_humidity_title">Humidity</string>
    <string name="pref_cloud_title">Cloud Cover</string>
    <string name="pref_precip_title">Precipitation</string>
    <string name="pref_pressure_title">Pressure</string>
    <string name="pref_visibility_title">Visibility</string>
    <string name="pref_speed_title">Wind Speed</string>

</resources>
